# wireguard-config-generator

./: CLAUDE.md  README.md  WEBDAV_USAGE.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.jsx  App.jsx.bak  HistoryView.jsx  ServerManagementView.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sync.rs  webdav.rs
src/components/: ConfigTabs.jsx  ConfirmDialog.jsx  HistoryDetailModal.jsx  Toast.css  Toast.jsx
src/pages/: HistoryView.jsx  ServerManagementView.jsx  ServerManagementView.jsx.bak  WebDavSettingsView.jsx
src/styles/: App.css
